[tool.poetry]
name = "dfuse-python"
version = "0.0.8"
description = "Python Bindings for the https://dfuse.io API"
authors = ["chmodx <chmod777.ke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
websockets = "^8.1"
python-decouple = "^3.4"
grpcio-tools = "^1.34.0"
requests = "^2.25.1"
grpcio = "^1.34.0"
requests-cache = "^0.5.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pytest-cov = "^2.10.1"
bandit = "^1.7.0"
pytest = "^6.2.1"
safety = "^1.10.1"
ipython = "^7.19.0"
isort = "^5.7.0"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
